clusters/beryjuio-home/paperless/ai/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ai
  namespace: paperless
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ai
      app.kubernetes.io/instance: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: paperless
        app.kubernetes.io/name: paperless-ai
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - env:
            - name: ACTIVATE_TAGGING
              value: "false"
            - name: AI_PROVIDER
              value: openai
            - name: OPENAI_MODEL
              value: gpt-4o-mini
            # https://github.com/clusterzx/paperless-ai/issues/379
            - name: PAPERLESS_AI_PORT
              value: "3513"
            - name: PAPERLESS_API_URL
              value: http://paperless.paperless.svc.cluster.local:8000/api
            - name: PROCESS_PREDEFINED_DOCUMENTS
              value: "true"
            - name: RESTRICT_TO_EXISTING_DOCUMENT_TYPES
              value: "true"
            - name: SCAN_INTERVAL
              value: "*/30 * * * *"
            - name: AI_PROCESSED_TAG_NAME
              value: AI
            - name: USE_EXISTING_DATA
              value: "true"
          image: clusterzx/paperless-ai:3.0.8@sha256:78fcb191f4e08a6e25cae7634aa4433199522f7d98a53a07b5a935d9ebd9a5f8
          name: app
          resources:
            limits:
              memory: 3Gi
            requests:
              cpu: 10m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /app/public/images
              name: cache
            - mountPath: /app/OPENAPI
              name: openapi
            - mountPath: /home/node/.pm2
              name: home
            - mountPath: /app/logs
              name: logs
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/data
              name: data
      volumes:
        - emptyDir: {}
          name: openapi
        - emptyDir: {}
          name: cache
        - emptyDir: {}
          name: home
        - emptyDir: {}
          name: logs
        - emptyDir: {}
          name: tmp
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ai-data
