clusters/beryjuio-home/paperless/ai/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ai
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - port: 3513
      targetPort: 3513
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: paperless-ai
