clusters/beryjuio-home/paperless/ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ai
  namespace: paperless
spec:
  ingressClassName: istio
  rules:
    - host: paperless-ai.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: paperless-ai
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless-ai.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-paperless-ai
